          'actions_registry' has been renamed "action_registry".
        # In the class 'creme_core.forms.fields.EntityCredsJSONField', the attribute
          'quickforms_registry' has been renamed "quickform_registry".
        # The method 'creme_core.gui.button_menu.Button.ok_4_display()' has been replaced by the method 'is_displayed()'.
        # In 'creme_core.views' :
            - In the class 'generic.listview.EntitiesList':
                - the attribute 'actions_registry' has been renamed "action_registry".
                - the method 'get_actions_registry()' has been renamed "get_action_registry".
            - In the class 'quick_forms.QuickCreation', the attribute
             'quickforms_registry' has been renamed "quickform_registry".
        # There is no "back" button in the template "creme_core/detailview.html" anymore.
        # Apps :
            * Documents :
                - The methods 'populate.Populator._populate_header_filters_for_*()' have been removed.
            * Persons :
                - In the class 'populate.Populator' :
                    - The content of the class attribute 'BUTTONS' has changed
                      (it now contains 'ButtonMenuItemProxy' instances).
                    - The methods '_populate_header_filters_for_*()' have been removed.
            * Activities :
                - The content of the class attribute 'populate.Populator.BUTTONS' has changed
                  (it now contains 'ButtonMenuItem' instances).
            * Billing :
               - These methods of 'populate.Populator' have been removed :
                    - _populate_buttons_config_for_*()
                    - _create_header_filter_for_line()
                    - _populate_header_filters_for_*()
               - The module 'views.convert' has been renamed "conversion".
            * Commercial :
                - The methods 'populate.Populator._populate_header_filters_for_*()' have been removed.
