@@ -124,8 +124,10 @@
         </div>
     </div>
 
-    {% brick_declare bricks %}
-    {% brick_display bricks %}
+{#    {% brick_declare bricks %} #}
+    {% brick_declare bricks.main %}
+{#    {% brick_display bricks %} #}
+    {% brick_display bricks.main %}
 
     <div class="brick brick-table">
         <div class="brick-header">
