@@ -6,7 +6,9 @@
 {% endblock %}
 
 {% block portal_bricks %}
-    {% brick_declare bricks %}
-    {% brick_display bricks %}
+{#    {% brick_declare bricks %} #}
+    {% brick_declare bricks.main %}
+{#    {% brick_display bricks %} #}
+    {% brick_display bricks.main %}
     {% brick_end %}
 {% endblock %}
