@@ -30,7 +30,9 @@
         </script>
     </div>
 
-    {% brick_declare bricks %}
-    {% brick_display bricks %}
+{#    {% brick_declare bricks %} #}
+    {% brick_declare bricks.main %}
+{#    {% brick_display bricks %} #}
+    {% brick_display bricks.main %}
     {% brick_end %}
 {% endblock %}
