@@ -174,7 +174,8 @@ class ModelPortal(ModelConfMixin, generic.BricksView):
     def get_bricks(self):
         model_conf = self.get_model_conf()
 
-        return [model_conf.get_brick()]
+        # return [model_conf.get_brick()]
+        return {'main': [model_conf.get_brick()]}
 
     def get_bricks_reload_url(self):
         return reverse(
@@ -308,7 +309,8 @@ class AppPortal(AppRegistryMixin, generic.BricksView):
     template_name = 'creme_config/generics/app-portal.html'
 
     def get_bricks(self):
-        return [*self.get_app_registry().bricks]  # Get config registered bricks
+        # return [*self.get_app_registry().bricks]  # Get config registered bricks
+        return {'main': [*self.get_app_registry().bricks]}  # Get config registered bricks
 
     def get_bricks_reload_url(self):
         return reverse(
