@@ -67,8 +67,10 @@ Concerned types: {{types}}{% endblocktranslate %}
         </ul>
     {% endif %}
 
-    {% brick_declare bricks %}
-    {% brick_display bricks %}
+{#    {% brick_declare bricks %} #}
+    {% brick_declare bricks.main %}
+{#    {% brick_display bricks %} #}
+    {% brick_display bricks.main %}
     {% brick_end %}
 </div>
 {% endblock %}
