@@ -11,8 +11,10 @@
         </div>
     </div>
 
-    {% brick_declare bricks %}
-    {% brick_display bricks %}
+{#    {% brick_declare bricks %} #}
+    {% brick_declare bricks.main %}
+{#    {% brick_display bricks %} #}
+    {% brick_display bricks.main %}
 
     {% brick_end %}
 {% endblock %}
