@@ -28,8 +28,10 @@
     </div>
 
     {% if bricks %}
-        {% brick_declare bricks %}
-        {% brick_display bricks %}
+{#        {% brick_declare bricks %} #}
+        {% brick_declare bricks.main %}
+{#        {% brick_display bricks %} #}
+        {% brick_display bricks.main %}
 
         {% brick_end %}
     {% else %}
