@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2009-2024  Hybird
+#    Copyright (C) 2009-2025  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -94,7 +94,8 @@ class Messages(generic.CremeModelDetailPopup):
 
     # TODO: bricks classes in a class attribute
     def get_bricks(self):
-        return [MessagesBrick()]
+        # return [MessagesBrick()]
+        return {'main': [MessagesBrick()]}
 
 
 # TODO: improve Message.delete() instead ?
